# AI-Engineering-Bootcamp

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_SCRIPT_UPDATE.md  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflow/: build-book.yml  smok-test.yml
.github/workflows/: book.yml  ci.yml  documentation.yml  notebooks.yml  python.yml
ai_platform/: __init__.py
book/week01/: README.md
book/week01/day01/: README.md  challenge.md  chapter.md  diagrams.md  exercises.md  interview.md  notes_architect.md  references.md
book/week01/day02/: README.md  challenge.md  chapter.md  exercises.md  interview.md  learning_objectives.md  references.md
book/week01/day03/: README.md  (+6 more)
docs/: day06_notes.md  index.md
docs/architecture/: overview.md
docs/decisions/: index.md
docs/glossary/: glossary.md
docs/market/: overview.md
examples/: hello_bootcamp.py
labs/: lab_numpy_embeddings.ipynb  lab_semantic_search_mock.ipynb
mini_framework/: __init__.py
notebooks/: S1_J1_History_of_Language_Models.ipynb
notebooks/week01/: S1_J3_transformer_attention.ipynb  S1_J4_tokens_bpe_context.ipynb  S1_J5_prompt_engineering.ipynb  S1_J6_modern_api_patterns.ipynb  S1_J7_first_python_client.ipynb
scripts/: build_notebooks.py  check_day_structure.py  validate_notebooks.py
specifications/: 01_BOOTCAMP_SPECIFICATION.md  02_ROADMAP.md  03_REPOSITORY_STRUCTURE.md  04_CONTENT_STANDARD.md  05_GENERATION_WORKFLOW.md  06_STYLE_GUIDE.md  07_DECISIONS.md
tests/: test_bootstrap.py
tests/week01/: test_scaled_dot_product_attention.py
workflow/: CI.yml
(+108 files in other folders)
