[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineering-bootcamp"
version = "0.0.1"
description = "AI Engineering Bootcamp: from backend developer to AI solution architect"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "nbformat>=5.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[tool.setuptools]
packages = ["mini_framework", "ai_platform"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
